[gd_scene load_steps=25 format=2]

[ext_resource path="res://font/CloisterBlack.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/MenuStart.gd" type="Script" id=2]
[ext_resource path="res://arte/music/awesomeness.mp3" type="AudioStream" id=3]
[ext_resource path="res://arte/cenario/2_Parallax background/background.png" type="Texture" id=4]
[ext_resource path="res://arte/cenario/2_Parallax background/Country.png" type="Texture" id=5]
[ext_resource path="res://arte/cenario/2_Parallax background/Back_Forest_1.png" type="Texture" id=6]
[ext_resource path="res://arte/cenario/2_Parallax background/Back_Forest_2.png" type="Texture" id=7]
[ext_resource path="res://arte/cenario/2_Parallax background/props_clouds.png" type="Texture" id=8]
[ext_resource path="res://arte/cenario/2_Parallax background/Cloud_3.png" type="Texture" id=9]
[ext_resource path="res://arte/cenario/2_Parallax background/Cloud_2.png" type="Texture" id=10]
[ext_resource path="res://arte/cenario/2_Parallax background/Cloud_1.png" type="Texture" id=11]
[ext_resource path="res://cenas/AudioStreamPlayerMenu.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=8]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform vec2 Direction = vec2(1.0,0.0);
uniform float Speed = 0.02f;

void fragment(){
	
	COLOR = texture(TEXTURE, UV + (Direction * TIME * Speed));
	
}
"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 13 )
shader_param/Direction = Vector2( 1, 0 )
shader_param/Speed = 0.02

[sub_resource type="Shader" id=14]
code = "shader_type canvas_item;

uniform vec2 Direction = vec2(1.0,0.0);
uniform float Speed = 0.009f;

void fragment(){
	
	COLOR = texture(TEXTURE, UV + (Direction * TIME * Speed));
	
}
"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 14 )
shader_param/Direction = Vector2( 1, 0 )
shader_param/Speed = 0.009

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.407843, 0.0352941, 0.0352941, 1 )
Button/colors/font_color_disabled = Color( 0.407843, 0.0352941, 0.0352941, 1 )
Button/colors/font_color_focus = Color( 0.615686, 0.054902, 0.054902, 1 )
Button/colors/font_color_hover = Color( 0.729412, 0.0627451, 0.0627451, 1 )
Button/colors/font_color_pressed = Color( 0.407843, 0.0352941, 0.0352941, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 4 )
Button/styles/focus = SubResource( 5 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 0.997
anchor_bottom = 1.0
margin_right = 0.0719604
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -396.5
margin_top = -229.0
margin_right = 422.5
margin_bottom = -111.0
custom_colors/font_color = Color( 0.407843, 0.0352941, 0.0352941, 1 )
custom_fonts/font = SubResource( 8 )
text = "The Heroine Journey"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
script = ExtResource( 12 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ceu" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 768, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ceu"]
position = Vector2( 6, 0 )
scale = Vector2( 2, 3.5 )
texture = ExtResource( 4 )
centered = false

[node name="nuvem" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1076, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/nuvem"]
material = SubResource( 10 )
position = Vector2( 5, 150 )
scale = Vector2( 4, 2 )
texture = ExtResource( 8 )
centered = false

[node name="nuvem4" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 1.6, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/nuvem4"]
material = SubResource( 12 )
position = Vector2( 0, -5 )
scale = Vector2( 2.5, 2.767 )
texture = ExtResource( 11 )
centered = false

[node name="nuvem5" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 1.6, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/nuvem5"]
position = Vector2( 0, -4 )
scale = Vector2( 2.5, 2.762 )
texture = ExtResource( 10 )
centered = false

[node name="nuvem3" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 1.6, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/nuvem3"]
position = Vector2( 0, -5 )
scale = Vector2( 2.5, 2.767 )
texture = ExtResource( 9 )
centered = false

[node name="arvores" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 1.6, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/arvores"]
position = Vector2( 0, 35 )
scale = Vector2( 2.5, 2.6 )
texture = ExtResource( 6 )
centered = false

[node name="arvores2" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2( 1.6, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/arvores2"]
position = Vector2( 0, -10 )
scale = Vector2( 2.5, 2.6 )
texture = ExtResource( 7 )
centered = false

[node name="castelo" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1075.2, 5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/castelo"]
position = Vector2( 0, 40 )
scale = Vector2( 2.8, 3.4 )
texture = ExtResource( 5 )
centered = false

[node name="controles" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -98.5
margin_top = -418.0
margin_right = 98.5
alignment = 1

[node name="start" type="Button" parent="controles"]
margin_top = 61.0
margin_right = 197.0
margin_bottom = 132.0
mouse_default_cursor_shape = 2
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Start"

[node name="Controls" type="Button" parent="controles"]
margin_top = 136.0
margin_right = 197.0
margin_bottom = 207.0
mouse_default_cursor_shape = 2
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Controls"

[node name="Credits" type="Button" parent="controles"]
margin_top = 211.0
margin_right = 197.0
margin_bottom = 282.0
mouse_default_cursor_shape = 2
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Credits"

[node name="Quit" type="Button" parent="controles"]
margin_top = 286.0
margin_right = 197.0
margin_bottom = 357.0
mouse_default_cursor_shape = 2
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Quit"

[connection signal="pressed" from="controles/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="controles/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="controles/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="controles/Quit" to="." method="_on_Quit_pressed"]
